--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
+*.cache
+*.dtbcache.v2
+*.pdb
+*.suo
+.suo
+*.testlog
+*.user
+*.ide
 
-Source/1.3/.vs
-Source/1.3/obj
-Source/1.1-1.2/.vs
-Source/1.1-1.2/obj
+**/.vs/Release
+**/.vs
+**/obj/Debug
+**/obj
+obj/
+.vs/
